## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

# List all md files that should be created from source files in the
# MD_PAGES variable. The filename pattern is as follows:
#
# dir/filename.lexc => filename-dir.md

MD_PAGES=root-morphology.md    \
		  phonology-morphology.md \
		  noun_stems-stems.md   \
		  verb_stems-stems.md   \
		  nouns-affixes.md      \
		  numerals-stems.md     \
		  particles-stems.md    \
		  pronouns-stems.md     \
		  punctuation-stems.md  \
		  verbs-affixes.md
# clitics-morphology.md       \
# compounding-morphology.md   \
# abbreviations-stems.md      \
# acronyms-stems.md           \
# adjectives-oahpa-stems.md   \
# adjectives-stems.md         \
# adpositions-stems.md        \
# adverbs-stems.md            \
# conjunctions-stems.md       \
# interjections-stems.md      \
# nouns-oahpa-stems.md        \
# numerals-stems.md           \
# particles-stems.md          \
# propernouns-stems.md        \
# smi-propernouns-stems.md    \
# subjunctions-stems.md       \
# adjectives-oahpa-affixes.md \
# adjectives-affixes.md       \
# propernouns-affixes.md      

include $(top_srcdir)/../giella-core/am-shared/docs-dir-include.am
